force-app/main/default/objects/Program_Participation__c/Program_Participation__c.object-meta.xml
<CustomObject>
    <description>Junction object relating Reporting Details and Program Participants.</description>
    <label>Program Participation</label>
    <nameField>
        <displayFormat>PPart-{00}</displayFormat>
        <label>Program Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>