force-app/main/default/objects/Program_Participation__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <formula>TEXT(Program_Participant__r.Ethnicity__c)</formula>
    <label>Ethnicity</label>
    <type>Text</type>
</CustomField>