force-app/main/default/objects/Program_Participation__c/fields/Income_AMI__c.field-meta.xml
<CustomField>
    <fullName>Income_AMI__c</fullName>
    <formula>TEXT(Program_Participant__r.Income_AMI__c)</formula>
    <label>Income AMI%</label>
    <type>Text</type>
</CustomField>