force-app/main/default/objects/Program_Participation__c/fields/NRSA__c.field-meta.xml
<CustomField>
    <fullName>NRSA__c</fullName>
    <formula>TEXT(Program_Participant__r.NRSA__c)</formula>
    <label>NRSA</label>
    <type>Text</type>
</CustomField>