force-app/main/default/objects/Program_Participation__c/fields/Program_Activity__c.field-meta.xml
<CustomField>
    <fullName>Program_Activity__c</fullName>
    <label>Program Activity</label>
    <referenceTo>Program_Activities__c</referenceTo>
    <relationshipLabel>Program Participations</relationshipLabel>
    <relationshipName>Program_Participations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>