force-app/main/default/objects/Program_Participation__c/fields/Program_Participant__c.field-meta.xml
<CustomField>
    <fullName>Program_Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Participant</label>
    <referenceTo>ProgramParticipant__c</referenceTo>
    <relationshipLabel>Program Participations</relationshipLabel>
    <relationshipName>Program_Participations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>