force-app/main/default/objects/Program_Participation__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <formula>TEXT(Program_Participant__r.Race__c)</formula>
    <label>Race</label>
    <type>Text</type>
</CustomField>