force-app/main/default/objects/Program_Participation__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting</label>
    <referenceTo>Reporting__c</referenceTo>
    <relationshipLabel>Program Participations</relationshipLabel>
    <relationshipName>Program_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>