force-app/main/default/objects/Program_Participation__c/fields/Reporting_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reporting Detail</label>
    <referenceTo>ReportingDetail__c</referenceTo>
    <relationshipLabel>Program Participations</relationshipLabel>
    <relationshipName>Program_Participations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>