force-app/main/default/objects/Program_Participation__c/fields/Units_this_period__c.field-meta.xml
<CustomField>
    <fullName>Units_this_period__c</fullName>
    <label>Units this period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>