force-app/main/default/objects/Program_Participation__c/fields/YTD__c.field-meta.xml
<CustomField>
    <fullName>YTD__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>