force-app/main/default/objects/Program_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Activity__c</columns>
    <columns>Program_Participant__c</columns>
    <columns>Reporting__c</columns>
    <columns>Reporting_Detail__c</columns>
    <columns>Units_this_period__c</columns>
    <columns>YTD__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>